--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
           >
             <!-- 2nd start  -->
             <div
-              class="flex-1 min-w-52 flexc flex-col px-5 gap-4 mb-10 font-sans"
+              class="flex-1 min-w-52 flex flex-col px-5 gap-4 mb-10 font-sans"
             >
               <p class="font-extrabold text-md text-[#525a76]">BANKING PLUS</p>
               <div class="text-sm flex flex-col gap-1.5">
